--- a/index.html
+++ b/index.html
@@ -295,7 +295,10 @@
                     <div>
                         <div class="reviews__item">
                             <img class="reviews__photo" src="images/bulba.png" alt="">
-                            <div class="reviews__text">“HAI ZYABL DAP DAYAP DAAAAAP!1!!!!1”</div>
+                            <div class="reviews__text">
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                            </div>
                             <div class="reviews__author">Anton Pavlovich Fekalis</div>
                         </div>
                     </div>
@@ -534,9 +537,10 @@
                         <div class="reviews__item reviews__item--avatar">
                             <img class="reviews__photo reviews__photo--avatar" src="images/suhach.jpg" alt="">
                             <div class="reviews__text">
-                                “YA HACHU PITSbl”
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
                             </div>
-                            <div class="reviews__author">Den4ik</div>
+                            <div class="reviews__author">Denis Suhachev</div>
                         </div>
                     </div>
                 </div>
